[Bug #18955] Check length of argument for `%c` in proper encoding